fix contact form, move close button for quote it form on mobile

--- a/static/css/insurancesmart.css
+++ b/static/css/insurancesmart.css
@@ -84,7 +84,7 @@ img {
 @media (max-width: 767px) {
   .qt-modal-content > iframe {
     margin: 0;
-    padding-top: 50px;
+    padding-top: 0px;
     height: 100vh;
     /* zoom: 0.5;
     -moz-transform: scale(0.5);
@@ -95,8 +95,14 @@ img {
     -webkit-transform-origin: 0 0; */
   }
   .qt-modal-content > .close-qt-modal {
-    left: 0;
-    right: 0;
+    top: auto;
+    bottom: 15px;
+    left: auto;
+    right: 15px;
+    padding: 5px 10px;
+    border-radius: 10px;
+    font-size: 14px;
+    height: auto;
   }
 }
 .container {
